--- a/style.css
+++ b/style.css
@@ -16,9 +16,29 @@ body {
   display: flex;
   position: relative;
   top: 10%;
-  left: 50%;
+  left: 40%;
+}
+.btns .modalOpenbtn {
+  margin: 0 1rem;
+  background-color: white;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  color: rgba(90, 83, 83, 0.63);
+  cursor: pointer;
+}
+.hidden {
+  display: none;
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: #383434b4;
+  z-index: 5;
+}
 .modal {
   position: relative;
   top: 30%;
@@ -29,6 +49,8 @@ body {
   padding: 2rem 3rem;
   line-height: 2rem;
   border-radius: 2rem;
+  box-shadow: 0.3rem 0.5rem 1rem rgba(87, 84, 84, 0.24);
+  z-index: 20;
 }
 .modal h1 {
   font-size: 2rem;
@@ -42,8 +64,9 @@ body {
 }
 .modal .closebtn {
   position: absolute;
-  top: 0.8rem;
+  top: 1.5rem;
   right: 2rem;
   font-size: 2rem;
   color: rgba(167, 146, 91, 0.781);
+  cursor: pointer;
 }
